# opengl_boilerplate

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
